--- a/Euklidsk-geometri/Volum---Pyramider.html
+++ b/Euklidsk-geometri/Volum---Pyramider.html
@@ -32,6 +32,14 @@ problemet (blant annet) ved å dele opp figuren vi skal måle i ørsmå
 biter slik vi gjorde med sirkelen. Men først:</p>
 <p>Her er enda en fin sammenheng mellom pyramider og esker, denne gang en
 terning:</p>
+<div id="container"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.min.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/loaders/ColladaLoader.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/controls/OrbitControls.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/renderers/SVGRenderer.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/renderers/Projector.js"></script>
+<script src="https://cdn.rawgit.com/mrdoob/three.js/r92/examples/js/exporters/STLExporter.js"></script>
+<script src="../Files/pyramide.js"></script>
 <p><img src=".././../Files/Pasted-image-20230921094948.png" alt/></p>
 <p>En terning inneholder seks identiske pyramider med toppunkt i sentrum
 av terningen. Hver slik pyramides volum er derfor én seksdel av
